5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1671_1107.log
== TEST (2019-04-29 13:22:33) 
-- CODE:
x=int(input("numero: "))
y=int(input("numero: "))
if(x==0)or(y==0):
	msg=("domingo")
elif(x==1)or(y==1):
	msg=("segunda")
elif(x==2)or(y==2):
	msg=("terça")
elif(x==3)or(y==3):
	msg=("quarta")
elif(x==4)or(y==4):
	msg=("quinta")
elif(x==5)or(y==5):
	msg=("sexta")
elif(x==6)or(y==6):
	msg=("sabado")
else:
	print("A entrada",x,"eh invalida")
print("Hoje eh",x,"e o dia futuro eh",y)
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:22:40) 
-- CODE:
x=int(input("numero: "))
y=int(input("numero: "))
if(x==0)or(y==0):
	msg=("domingo")
elif(x==1)or(y==1):
	msg=("segunda")
elif(x==2)or(y==2):
	msg=("terça")
elif(x==3)or(y==3):
	msg=("quarta")
elif(x==4)or(y==4):
	msg=("quinta")
elif(x==5)or(y==5):
	msg=("sexta")
elif(x==6)or(y==6):
	msg=("sabado")
else:
	print("A entrada",x,"eh invalida")
print("Hoje eh",x,"e o dia futuro eh",y)
	
	
-- EXECUTION TIME:
0.170416
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh 6 e o dia futuro eh 1024
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:22:52) 
-- CODE:
x=int(input("numero: "))
y=int(input("numero: "))
if(x==0)or(y==0):
	msg=("domingo")
elif(x==1)or(y==1):
	msg=("segunda")
elif(x==2)or(y==2):
	msg=("terça")
elif(x==3)or(y==3):
	msg=("quarta")
elif(x==4)or(y==4):
	msg=("quinta")
elif(x==5)or(y==5):
	msg=("sexta")
elif(x==6)or(y==6):
	msg=("sabado")
else:
	print("A entrada",x,"eh invalida")
print("Hoje eh",x,"e o dia futuro eh",y)
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:23:18) 
-- CODE:
x=int(input("numero: "))
y=int(input("numero: "))
if(x==0)or(y==0):
	msg=("domingo")
elif(x==1)or(y==1):
	msg=("segunda")
elif(x==2)or(y==2):
	msg=("terça")
elif(x==3)or(y==3):
	msg=("quarta")
elif(x==4)or(y==4):
	msg=("quinta")
elif(x==5)or(y==5):
	msg=("sexta")
elif(x==6)or(y==6):
	msg=("sabado")
else:
	print("A entrada",x,"eh invalida")
print("Hoje eh",msg,"e o dia futuro eh",msg)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print("Hoje eh",msg,"e o dia futuro eh",msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:24:27) 
-- CODE:
x=int(input("numero: "))
y=int(input("numero: "))
if(x==0):
	msg=("domingo")
elif(x==1):
	msg=("segunda")
elif(x==2):
	msg=("terça")
elif(x==3):
	msg=("quarta")
elif(x==4):
	msg=("quinta")
elif(x==5):
	msg=("sexta")
elif(x==6):
	msg=("sabado")
else:
	print("A entrada",x,"eh invalida")

	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
